--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "clamp": "^1.0.1",
+    "pick-item": "^1.0.1",
     "pick-items": "^1.0.2",
     "random-binary": "^1.0.1",
     "random-bool": "^1.0.0",
