--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "clamp": "^1.0.1",
     "pick-item": "^1.0.1",
     "pick-items": "^1.0.2",
+    "pick-key": "^1.0.1",
+    "pick-keys": "^1.0.1",
+    "pick-prop": "^1.0.1",
+    "pick-props": "^1.0.1",
     "random-binary": "^1.0.1",
     "random-bool": "^1.0.0",
     "random-char": "^1.0.1",
